--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Spectral</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
+							<h2>Spicy Piñata</h2>
+							<p>Best Place for everything<br />
+							everything good!<br />
 							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
 							<ul class="actions">
 								<li><a href="#" class="button special">Activate</a></li>
