--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Spicy Piñata</h2>
-							<p>Best Place for everything<br />
-							everything good!<br />
+							<p>Best Place for giggles<br />
+							and everything good!<br />
 							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
 							<ul class="actions">
-								<li><a href="#" class="button special">Activate</a></li>
+								<li><a href="https://www.youtube.com/channel/UChFohejfigXag9hBSi_yt4w" class="button special">Youtube</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#one" class="more scrolly">Our Stuffe</a>
 					</section>
 
 				<!-- One -->
