--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/Podcast.jpg" alt="" /></div><div class="content">
+							<div style="width: 141px; height: 176px; overflow: hidden"><img src="images/Podcast.jpg" alt="" /></div><div class="content">
 								<h2>Everyday Nothing <br />
 								Special Podcast</h2>
 								<p>Listen to a couple of peeps ramble about everyday nothing special things.</p>
