--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								<li><a href="https://www.youtube.com/channel/UChFohejfigXag9hBSi_yt4w" class="button special">Youtube</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Our Stuffe</a>
+						<a href="#one" class="more scrolly">Our Stuff</a>
 					</section>
 
 				<!-- One -->
@@ -74,7 +74,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div style="width: 141px; height: 176px; overflow: hidden"><img src="images/Podcast.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/Podcast.jpg" alt="" /></div><div class="content">
 								<h2>Everyday Nothing <br />
 								Special Podcast</h2>
 								<p>Listen to a couple of peeps ramble about everyday nothing special things.</p>
@@ -150,7 +150,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://twitter.com/SpicyPinata" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
