--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="generic.html">Podcast</a></li>
+											<li><a href="elements.html">Videos</a></li>
+											<li><a href="#">About Us</a></li>
+											<li><a href="#">Contact Us</a></li>
 										</ul>
 									</div>
 								</li>
@@ -82,16 +82,16 @@
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Those Poor Boys<br />
+								</h2>
+								<p>Some say that they cry themselves to sleep every night. Other say they smell like pepper. All I know, is that they're hear to play some games and make you laugh.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Live Action Shortsbr />
+								</h2>
+								<p>From skits to short films, there is plenty for the whole town. They'll make you laugh, they'll make you cry and they'll definely want to make you sue us because "I swear to god I thought of that idea! They stole from me!!"</p>
 							</div>
 						</section>
 					</section>
@@ -157,7 +157,7 @@
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Spicy Piñata</li><li>Design: <a href="index.html">Back to Top</a></li>
 						</ul>
 					</footer>
 
