--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="Gameplay Small.jpg" alt="" /></div><div class="content">
 								<h2>Those Poor Boys<br />
 								</h2>
 								<p>Some say that they cry themselves to sleep every night. Other say they smell like pepper. All I know, is that they're hear to play some games and make you laugh.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="Live Action Small.jpg" alt="" /></div><div class="content">
 								<h2>Live Action Shortsbr />
 								</h2>
 								<p>From skits to short films, there is plenty for the whole town. They'll make you laugh, they'll make you cry and they'll definely want to make you sue us because "I swear to god I thought of that idea! They stole from me!!"</p>
