--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/Live Action Small.jpg" alt="" /></div><div class="content">
-								<h2>Live Action Shortsbr />
+								<h2>Live Action Shorts
 								</h2>
 								<p>From skits to short films, there is plenty for the whole town. They'll make you laugh, they'll make you cry and they'll definely want to make you sue us because "I swear to god I thought of that idea! They stole from me!!"</p>
 							</div>
