--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/Podcast Small.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/PodcastTile.jpg" alt="" /></div><div class="content">
 								<h2>Everyday Nothing <br />
 								Special Podcast</h2>
 								<p>Listen to a couple of peeps ramble about everyday nothing special things.</p>
@@ -100,18 +100,18 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Our Weekly Release Schedule!</h2>
+								<p>Wondering what we're working on? Want to know when it's being released? Well... look.<br />
+								We are very busy people, but catch our shows when released.</p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Those Poor Boys</h3>
+									<p>Upcoming: Battleblock Theater, Mario Sunshine, Mario Party and more!</p>
 								</li>
 								<li class="icon fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Everyday Nothing Special Podcast</h3>
+									<p>Upcoming: Episodes 1-3 on Soundcloud and <a href="https://www.youtube.com/channel/UChFohejfigXag9hBSi_yt4w">Youtube</a>.</p>
 								</li>
 								<li class="icon fa-code">
 									<h3>Mus Scelerisque</h3>
