--- a/elements.html
+++ b/elements.html
@@ -50,11 +50,10 @@
 							<div class="inner">
 
 								<section>
-									<h4>Image</h4>
-									<h5>Fit</h5>
+									<h4>Videos</h4>
 									<div class="box alt">
 										<div class="row uniform 50%">
-											<div class="12u"><span class="image fit"><img src="images/banner.jpg" alt="" /></span></div>
+											<div class="12u"><span class="image fit"><a href="https://www.youtube.com/watch?v=7gHiCJtqn24&t=24s"<img src="images/Live Action.jpg"</a> alt="" /></span></div>
 											<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
 											<div class="4u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
 											<div class="4u"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
