--- a/elements.html
+++ b/elements.html
@@ -53,7 +53,7 @@
 									<h4>Videos</h4>
 									<div class="box alt">
 										<div class="row uniform 50%">
-											<div class="12u"><span class="image fit"><a href="https://www.youtube.com/watch?v=7gHiCJtqn24&t=24s"<img src="images/Live Action.jpg"</a> alt="" /></span></div>
+											<div class="12u"><span class="image fit"><a href="https://www.youtube.com/watch?v=7gHiCJtqn24&t=24s"><img src="images/Live Action.jpg"</a> alt="" /></span></div>
 											<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
 											<div class="4u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
 											<div class="4u"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
