--- a/index.html
+++ b/index.html
@@ -74,21 +74,21 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/PodcastTile.jpg" alt="" /></div><div class="content">
+							<div class="image"><a href="generic.html"><img src="images/PodcastTile.jpg" alt="" /></a></div><div class="content">
 								<h2>Everyday Nothing <br />
 								Special Podcast</h2>
 								<p>Listen to a couple of peeps ramble about everyday nothing special things.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/Gameplay Small.jpg" alt="" /></div><div class="content">
+							<div class="image"><a href="elements.html"><img src="images/Gameplay Small.jpg" alt="" /></a></div><div class="content">
 								<h2>Those Poor Boys<br />
 								</h2>
 								<p>Some say that they cry themselves to sleep every night. Other say they smell like pepper. All I know, is that they're hear to play some games and make you laugh.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/Live Action Small.jpg" alt="" /></div><div class="content">
+							<div class="image"><a href="elements.html"><img src="images/Live Action Small.jpg" alt="" /></a></div><div class="content">
 								<h2>Live Action Shorts
 								</h2>
 								<p>From skits to short films, there is plenty for the whole town. They'll make you laugh, they'll make you cry and they'll definely want to make you sue us because "I swear to god I thought of that idea! They stole from me!!"</p>
@@ -114,20 +114,20 @@
 									<p>Upcoming: Episodes 1-3 on Soundcloud and <a href="https://www.youtube.com/channel/UChFohejfigXag9hBSi_yt4w">Youtube</a>.</p>
 								</li>
 								<li class="icon fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>TBD</h3>
+									<p>Upcoming: TBD</p>
 								</li>
 								<li class="icon fa-headphones">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>TBD</h3>
+									<p>Upcoming: TBD</p>
 								</li>
 								<li class="icon fa-heart-o">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>TBD</h3>
+									<p>Upcoming: TBD</p>
 								</li>
 								<li class="icon fa-flag-o">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>TBD</h3>
+									<p>Upcoming: TBD</p>
 								</li>
 							</ul>
 						</div>
@@ -137,12 +137,12 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<h2>Check Us Out!</h2>
+								<p>We're always trying to get our stuff out there on as many things as possible. Check some of those out.</p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="#" class="button fit special">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="#" class="button fit special">SoundCloud</a></li>
+								<li><a href="#" class="button fit">Vimeo</a></li>
 							</ul>
 						</div>
 					</section>
@@ -157,7 +157,7 @@
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Spicy Piñata</li><li>Design: <a href="index.html">Back to Top</a></li>
+							<li>&copy; Spicy Piñata</li><li><a href="index.html">Back to Home</a></li>
 						</ul>
 					</footer>
 
