--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 								<p>We're always trying to get our stuff out there on as many things as possible. Check some of those out.</p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="#" class="button fit special">SoundCloud</a></li>
+								<li><a href="https://soundcloud.com/user-130344834" class="button fit special">SoundCloud</a></li>
 								<li><a href="#" class="button fit">Vimeo</a></li>
 							</ul>
 						</div>
@@ -154,7 +154,7 @@
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="mailto:thespicypinata@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Spicy Piñata</li><li><a href="index.html">Back to Home</a></li>
