--- a/generic.html
+++ b/generic.html
@@ -47,9 +47,8 @@
 							<p>Everyday Nothing Special Podcast!</p>
 						</header>
 						<section>
-						<h5>Alternate</h5>
+						<h5>Everyday Nothing Special Podcast</h5>
 									<div class="table-wrapper">
-										<table class="alt">
 											<thead>
 												<tr>
 													<th>Name</th>
