--- a/generic.html
+++ b/generic.html
@@ -49,6 +49,8 @@
 						<section>
 						<h5>Everyday Nothing Special Podcast</h5>
 									<div class="table-wrapper">
+										<table class="alt">
+
 											<thead>
 												<tr>
 													<th>Name</th>
@@ -111,10 +113,10 @@
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="mailto:thespicypinata@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Spicy Piñata</li><li>Design: <a href="index.html">Back to Home</a></li>
+							<li>&copy; Spicy Piñata</li><li><a href="index.html">Back to Home</a></li>
 						</ul>
 					</footer>
 
