--- a/generic.html
+++ b/generic.html
@@ -50,6 +50,7 @@
 						<h3>Everyday Nothing Special Podcast</h3>
 									<div class="table-wrapper">
 										<table class="alt">
+											<table width ="400">
 
 											<thead>
 												<tr>
