--- a/generic.html
+++ b/generic.html
@@ -53,37 +53,21 @@
 											
 											<thead>
 												<tr>
+													<th>Episode</th>
 													<th>Name</th>
 													<th>Description</th>
-													<th>Episode</th>
 												</tr>
 											</thead>
 											<tbody>
 												<tr>
+													<td>001</td>
 													<td>Savannah Rose</td>
 													<td>Jesus, Tommy and Tony talk about Soul Plane, Savannah Rose and more.</td>
-													<td>001</td>
 												</tr>
 												<tr>
-													<td></td>
-													<td></td>
 													<td>002</td>
-												</tr>
-												<tr>
-													<td></td>
-													<td></td>
-													<td>003</td>
-												</tr>
-												<tr>
-													<td></td>
-													<td></td>
-													<td>004</td>
-												</tr>
-												<tr>
-													<td></td>
-													<td></td>
-													<td>005</td>
-												</tr>
+													<td>Too Much Porn</td>
+													<td>Jesus, Tommy and Tony talk about their porn searches. Oh boy...</td>
 											</tbody>
 										</table>
 									</div>
