--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 							</header>
 							<ul class="actions vertical">
 								<li><a href="https://soundcloud.com/user-130344834" class="button fit special">SoundCloud</a></li>
-								<li><a href="#" class="button fit">Vimeo</a></li>
+								<li><a href="https://vimeo.com/user69303538" class="button fit">Vimeo</a></li>
 							</ul>
 						</div>
 					</section>
