--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 								</li>
 								<li class="icon fa-laptop">
 									<h3>Everyday Nothing Special Podcast</h3>
-									<p>Upcoming: Episodes 1-3 on Soundcloud and <a href="https://www.youtube.com/channel/UChFohejfigXag9hBSi_yt4w">Youtube</a>.</p>
+									<p>Upcoming: Episodes 1-3 on <a href ="https://soundcloud.com/user-130344834">Soundcloud</a> and <a href="https://www.youtube.com/channel/UChFohejfigXag9hBSi_yt4w">Youtube</a>.</p>
 								</li>
 								<li class="icon fa-code">
 									<h3>TBD</h3>
@@ -147,13 +147,13 @@
 					<footer id="footer">
 						<ul class="icons">
 							<li><a href="https://twitter.com/SpicyPinata" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.facebook.com/thespicypinata/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.instagram.com/thespicypinata/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="mailto:thespicypinata@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Spicy Piñata</li><li><a href="index.html">Back to Home</a></li>
+							<li>&copy;2017 Spicy Piñata</li><li><a href="index.html">Back to Home</a></li>
 						</ul>
 					</footer>
 
