--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><a href="elements.html"><img src="images/Gameplay Small.jpg" alt="" /></a></div><div class="content">
+							<div class="image"><a href="elements.html"><img src="images/Thumbnail.jpg" alt="" /></a></div><div class="content">
 								<h2>Those Poor Boys<br />
 								</h2>
 								<p>Some say that they cry themselves to sleep every night. Other say they smell like pepper. All I know, is that they're hear to play some games and make you laugh.</p>
