--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><a href="generic.html"><img src="images/Thumbnail.jpg" alt="" /></a></div><div class="content">
+							<div class="image"><a href="elements.html"><img src="images/Thumbnail.jpg" alt="" /></a></div><div class="content">
 								<h2>Those Poor Boys<br />
 								</h2>
 								<p>Some say that they cry themselves to sleep every night. Other say they smell like pepper. All I know, is that they're hear to play some games and make you laugh.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><a href="elements.html"><img src="images/PodcastTile.jpg" alt="" /></a></div><div class="content">
+							<div class="image"><a href="generic.html"><img src="images/PodcastTile.jpg" alt="" /></a></div><div class="content">
 								<h2>Everyday Nothing Special Podcast<br />
 								</h2>
 								<p>Listen to a couple of peeps ramble about everyday nothing special things.</p>
