--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 							<div class="image"><a href="elements.html"><img src="images/Thumbnail.jpg" alt="" /></a></div><div class="content">
 								<h2>Those Poor Boys<br />
 								</h2>
-								<p>Some say that they cry themselves to sleep every night. Other say they smell like pepper. All I know, is that they're hear to play some games and make you laugh.</p>
+								<p>Some say that they cry themselves to sleep every night. Other say they smell like pepper. All I know, is that they're here to play some games and make you laugh.</p>
 							</div>
 						</section>
 						<section class="spotlight">
