--- a/index.html
+++ b/index.html
@@ -98,28 +98,11 @@
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
 									<h3>Those Poor Boys</h3>
-									<p>Upcoming: Battleblock Theater, Mario Sunshine, Mario Party and more!</p>
-								</li>
-								<li class="icon fa-laptop">
-									<h3>Everyday Nothing Special Podcast</h3>
-									<p>Upcoming: Episodes 1-3 on <a href ="https://soundcloud.com/user-130344834">Soundcloud</a> and <a href="https://www.youtube.com/channel/UChFohejfigXag9hBSi_yt4w">Youtube</a>.</p>
-								</li>
-								<li class="icon fa-code">
-									<h3>TBD</h3>
-									<p>Upcoming: TBD</p>
+									<p>New Videos every Tuesday and Friday. Check out our <a href = "https://www.youtube.com/channel/UCHXWAtXQEx8dlRDxyw-o21A?view_as=subscriber"Youtube!</a></p>
 								</li>
 								<li class="icon fa-headphones">
-									<h3>TBD</h3>
-									<p>Upcoming: TBD</p>
-								</li>
-								<li class="icon fa-heart-o">
-									<h3>TBD</h3>
-									<p>Upcoming: TBD</p>
-								</li>
-								<li class="icon fa-flag-o">
-									<h3>TBD</h3>
-									<p>Upcoming: TBD</p>
-								</li>
+									<h3>Everyday Nothing Special Podcast</h3>
+									<p>New Podcasts every Thursday! Stay tuned at <a href ="https://soundcloud.com/user-130344834">Soundcloud</a> and <a href="https://www.youtube.com/channel/UChFohejfigXag9hBSi_yt4w">Youtube</a>.</p>
 							</ul>
 						</div>
 					</section>
