--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
 									<h3>Those Poor Boys</h3>
-									<p>New Videos every Tuesday and Friday. Check out our <a href = "https://www.youtube.com/channel/UCHXWAtXQEx8dlRDxyw-o21A?view_as=subscriber"Youtube!</a></p>
+									<p>New Videos every Tuesday and Friday. Check out our <a href = "https://www.youtube.com/channel/UCHXWAtXQEx8dlRDxyw-o21A?view_as=subscriber">Youtube!</a></p>
 								</li>
 								<li class="icon fa-headphones">
 									<h3>Everyday Nothing Special Podcast</h3>
@@ -127,7 +127,7 @@
 							<li><a href="https://twitter.com/SpicyPinata" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.facebook.com/thespicypinata/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/thespicypinata/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+							<li><a href="#" class="icon fa-youtube"><span class="label">Dribbble</span></a></li>
 							<li><a href="mailto:thespicypinata@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
