--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 							<li><a href="https://twitter.com/SpicyPinata" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.facebook.com/thespicypinata/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/thespicypinata/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-youtube"><span class="label">Dribbble</span></a></li>
+							<li><a href="https://www.youtube.com/channel/UChFohejfigXag9hBSi_yt4w" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
 							<li><a href="mailto:thespicypinata@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
