--- a/elements.html
+++ b/elements.html
@@ -53,16 +53,23 @@
 									<h4>Videos</h4>
 									<div class="box alt">
 										<div class="row uniform 50%">
-											<div class="12u"><span class="image fit"><a href="https://www.youtube.com/watch?v=7gHiCJtqn24&t=24s"><img src="images/Live Action.jpg" alt="" /></a></span></div>
-											<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-											<div class="4u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-											<div class="4u"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-											<div class="4u"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-											<div class="4u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-											<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-											<div class="4u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-											<div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-											<div class="4u"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
+											<div class="12u"><span class="image fit"><a href="https://www.youtube.com/watch?v=DwVBVVxzUJw"><img src="images/video1.jpg" alt="" /></a></span></div>
+											<div class="4u"><span class="image fit"><a href="https://www.youtube.com/watch?v=xbGXwyvzFgs&t="><img src="images/video4.jpg" alt="" /></a></span></div>
+											<div class="4u"><span class="image fit"><a href="https://www.youtube.com/watch?v=VTmxK6EPHIU&t="><img src="images/video6.jpg" alt="" /></a></span></div>
+											<div class="4u"><span class="image fit"><a href="https://www.youtube.com/watch?v=P8AfhyEsd7w&t="><img src="images/video9.jpg" alt="" /></a></span></div>
+											<div class="4u"><span class="image fit"><a href="https://www.youtube.com/watch?v=VHUF0gM95ac&t="><img src="images/video8.jpg" alt="" /></a></span></div>
+											<div class="4u"><span class="image fit"><a href="https://www.youtube.com/watch?v=uyZN0Ofyk_k&t="><img src="images/video10.jpg" alt="" /></a></span></div>
+											<div class="4u"><span class="image fit"><a href="https://www.youtube.com/watch?v=FulY7cxmkUc"><img src="images/video5.jpg" alt="" /></a></span></div>
+											<div class="4u"><span class="image fit"><a href="https://www.youtube.com/watch?v=CHf_yrzpTXM"><img src="images/video8.jpg" alt="" /></a></span></div>
+											<div class="4u"><span class="image fit"><a href="https://www.youtube.com/watch?v=r3zdN2MJWaI&t"><img src="images/video10.jpg" alt="" /></a></span></div>
+											<div class="4u"><span class="image fit"><a href="https://www.youtube.com/watch?v=pZcEPxBKD-c&t"><img src="images/video3.jpg" alt="" /></a></span></div>
+											<div class="4u"><span class="image fit"><a href="https://youtu.be/VLvoz3357G0"><img src="images/video11.jpg" alt="" /></a></span></div>
+											<div class="4u"><span class="image fit"><a href="https://youtu.be/AjDW8KTjoJ4"><img src="images/video12.jpg" alt="" /></a></span></div>
+											<div class="4u"><span class="image fit"><a href="https://youtu.be/kcZVi1_okXg"><img src="images/video12.jpg" alt="" /></a></span></div>
+											<div class="4u"><span class="image fit"><a href="https://youtu.be/dzMUo55L07Y"><img src="images/video7.jpg" alt="" /></a></span></div>
+											<div class="4u"><span class="image fit"><a href="https://youtu.be/R3Uk_hVJ558"><img src="images/video12.jpg" alt="" /></a></span></div>
+											<div class="4u"><span class="image fit"><a href="https://youtu.be/Ec52aXFISEU"><img src="images/video12.jpg" alt="" /></a></span></div>
+											
 										</div>
 									</div>
 								</section>
