--- a/elements.html
+++ b/elements.html
@@ -53,22 +53,24 @@
 									<h4>Videos</h4>
 									<div class="box alt">
 										<div class="row uniform 50%">
-											<div class="12u"><span class="image fit"><a href="https://www.youtube.com/watch?v=DwVBVVxzUJw"><img src="images/video1.jpg" alt="" /></a></span></div>
+											<div class="12u"><span class="image fit"><a href="https://youtu.be/WlpkpKwYT4Q"><img src="images/video14.jpg" alt="" /></a></span></div>
+											<div class="4u"><span class="image fit"><a href="https://youtu.be/wQsodxrsALw"><img src="images/video13.jpg" alt="" /></a></span></div>
+											<div class="4u"><span class="image fit"><a href="https://www.youtube.com/watch?v=DwVBVVxzUJw"><img src="images/video1.jpg" alt="" /></a></span></div>
 											<div class="4u"><span class="image fit"><a href="https://www.youtube.com/watch?v=xbGXwyvzFgs&t="><img src="images/video4.jpg" alt="" /></a></span></div>
 											<div class="4u"><span class="image fit"><a href="https://www.youtube.com/watch?v=VTmxK6EPHIU&t="><img src="images/video6.jpg" alt="" /></a></span></div>
 											<div class="4u"><span class="image fit"><a href="https://www.youtube.com/watch?v=P8AfhyEsd7w&t="><img src="images/video9.jpg" alt="" /></a></span></div>
 											<div class="4u"><span class="image fit"><a href="https://www.youtube.com/watch?v=VHUF0gM95ac&t="><img src="images/video8.jpg" alt="" /></a></span></div>
-											<div class="4u"><span class="image fit"><a href="https://www.youtube.com/watch?v=uyZN0Ofyk_k&t="><img src="images/video10.jpg" alt="" /></a></span></div>
+											<div class="4u"><span class="image fit"><a href="https://www.youtube.com/watch?v=uyZN0Ofyk_k&t="><img src="images/video18.jpg" alt="" /></a></span></div>
 											<div class="4u"><span class="image fit"><a href="https://www.youtube.com/watch?v=FulY7cxmkUc"><img src="images/video5.jpg" alt="" /></a></span></div>
 											<div class="4u"><span class="image fit"><a href="https://www.youtube.com/watch?v=CHf_yrzpTXM"><img src="images/video8.jpg" alt="" /></a></span></div>
 											<div class="4u"><span class="image fit"><a href="https://www.youtube.com/watch?v=r3zdN2MJWaI&t"><img src="images/video10.jpg" alt="" /></a></span></div>
 											<div class="4u"><span class="image fit"><a href="https://www.youtube.com/watch?v=pZcEPxBKD-c&t"><img src="images/video3.jpg" alt="" /></a></span></div>
 											<div class="4u"><span class="image fit"><a href="https://youtu.be/VLvoz3357G0"><img src="images/video11.jpg" alt="" /></a></span></div>
 											<div class="4u"><span class="image fit"><a href="https://youtu.be/AjDW8KTjoJ4"><img src="images/video12.jpg" alt="" /></a></span></div>
-											<div class="4u"><span class="image fit"><a href="https://youtu.be/kcZVi1_okXg"><img src="images/video12.jpg" alt="" /></a></span></div>
+											<div class="4u"><span class="image fit"><a href="https://youtu.be/kcZVi1_okXg"><img src="images/video17.jpg" alt="" /></a></span></div>
 											<div class="4u"><span class="image fit"><a href="https://youtu.be/dzMUo55L07Y"><img src="images/video7.jpg" alt="" /></a></span></div>
-											<div class="4u"><span class="image fit"><a href="https://youtu.be/R3Uk_hVJ558"><img src="images/video12.jpg" alt="" /></a></span></div>
-											<div class="4u"><span class="image fit"><a href="https://youtu.be/Ec52aXFISEU"><img src="images/video12.jpg" alt="" /></a></span></div>
+											<div class="4u"><span class="image fit"><a href="https://youtu.be/R3Uk_hVJ558"><img src="images/video16.jpg" alt="" /></a></span></div>
+											<div class="4u"><span class="image fit"><a href="https://youtu.be/Ec52aXFISEU"><img src="images/video15.jpg" alt="" /></a></span></div>
 											
 										</div>
 									</div>
@@ -81,11 +83,11 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://twitter.com/SpicyPinata" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.facebook.com/thespicypinata/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.instagram.com/thespicypinata/?hl=en" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="https://www.youtube.com/user/ThosePoorBoys" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="mailto:thosepoorboys@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Spicy Piñata</li><li>Design: <a href="index.html">Back To Home</a></li>
