--- a/generic.html
+++ b/generic.html
@@ -60,14 +60,10 @@
 											</thead>
 											<tbody>
 												<tr>
-													<td>001</td>
-													<td>Savannah Rose</td>
-													<td>Jesus, Tommy and Tony talk about Soul Plane, Savannah Rose and more.</td>
+													<td><a href="https://soundcloud.com/user-130344834/everyday-nothing-special-podcast-episode-1-welcome/s-q6s8n">001</a></td> 
+													<td>Welcome!</td>
+													<td>Jesus, Tommy and Tony talk about scary stuff as kids, workplace bothers and weird stuff.</td>
 												</tr>
-												<tr>
-													<td>002</td>
-													<td>Too Much Porn</td>
-													<td>Jesus, Tommy and Tony talk about their porn searches. Oh boy...</td>
 											</tbody>
 										</table>
 									</div>
