--- a/generic.html
+++ b/generic.html
@@ -61,7 +61,7 @@
 											<tbody>
 												<tr>
 													<td><a href="https://soundcloud.com/user-130344834/everyday-nothing-special-podcast-episode-1-welcome/s-q6s8n">001</a></td> 
-													<td>Welcome!</td>
+													<td>Rubber Noose</td>
 													<td>Jesus, Tommy and Tony talk about scary stuff as kids, workplace bothers and weird stuff.</td>
 												</tr>
 											</tbody>
