--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Podcast</a></li>
+											<li><a href="podcast.html">Podcast</a></li>
 											<li><a href="elements.html">Videos</a></li>
 											<li><a href="#">About Us</a></li>
 											<li><a href="#">Contact Us</a></li>
